tenants/panchito/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: panchito
  labels:
    zave.io/workload: panchito
