tenants/panchito/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: panchito
  namespace: panchito
  labels:
    app: panchito
    zave.io/workload: panchito
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
      name: http
  selector:
    app: panchito
